2002-08-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/alpha/fpu/libm-test-ulps: Regenerate.

2002-08-18  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/mkdir.c (__mkdir): Use __directory_name_split
	instead of __file_name_split.
	* sysdeps/mach/hurd/unlink.c (__unlink): Likewise.

	* sysdeps/mach/hurd/dl-sysdep.c
	[HP_TIMING_AVAIL] (_dl_cpuclock_offset): New variable.
	[HP_TIMING_AVAIL] (_dl_sysdep_start): Set it with HP_TIMING_NOW.

2002-08-16  Jakub Jelinek  <jakub@redhat.com>

        * locale/loadarchive.c (_nl_load_locale_from_archive): Braino fix
	in change before last: MAX -> MIN.

2002-08-15  Roland McGrath  <roland@redhat.com>

	* libio/fileops.c (_IO_file_seekoff_mmap): Leave read pointers at EOF
	if seek would go past it.
	(mmap_remap_check): If file position is at or past EOF after check,
	leave read pointers at EOF and don't seek.

	* libio/tst-mmap-offend.c: New file.
	* libio/Makefile (tests): Add it.

	* locale/loadarchive.c (_nl_load_locale_from_archive) Store strdup of
	the name as passed, rather than the name in the archive dictionary.

2002-08-15  Ulrich Drepper  <drepper@redhat.com>

	* csu/Makefile: Define elide-routines.os not static-only-routines.

	* include/sched.h (__clone): Add varargs at the end.

	* elf/rtld.c (_dl_start): Allow TLS_INIT_TP to fail, and stop in that
	case.
	(TLS_INIT_HELPER): If defined, use it.
	* sysdeps/generic/libc-tls.c (TLS_INIT_HELPER): Likewise.

2002-08-15  Roland McGrath  <roland@redhat.com>

	* elf/dl-load.c (lose): Remove [!SHARED] conditional from null check
	on L->l_prev; it can happen under rtld --verify too.

	* locale/loadarchive.c (_nl_load_locale_from_archive): Don't read the
	header separately, just map an initial window of 2MB from the file
	and remap if that is not large enough to cover the whole header.

2002-08-15  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/m68k/Versions: Add *xattr syscalls with
	version 2.3.
	* sysdeps/unix/sysv/linux/arm/Versions: Likewise.